# AI_NovelGenerator

./: .gitignore  AGENTS.md  chapter_directory_parser.py  config_manager.py  llm_adapters.py  main.py  prompt_definitions.py  requirements.txt
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  (+2 more)
app/: __init__.py
app/api/: __init__.py  server.py
app/services/: __init__.py  generation_executor.py  generation_job_store.py  project_store.py
docs/: feature-map-and-acceptance.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
novel_generator/: finalization.py  knowledge.py
scripts/: dev.sh
tests/: test_api_batch_generation_jobs.py  test_api_chapters.py  test_api_generation_jobs.py  test_api_health.py  test_api_knowledge_tools.py  test_api_legacy_config_compatibility.py  test_api_model_settings.py  test_api_project_config.py  test_api_project_files.py  test_api_projects.py  test_api_projects_and_knowledge.py  test_api_role_library.py  test_api_webdav.py  test_chapter_directory_parser.py  test_frontend_service_bridge_contract.py  test_llm_adapters.py
ui/: chapters_tab.py  character_tab.py  config_tab.py  directory_tab.py  generation_handlers.py  main_tab.py  main_window.py  novel_params_tab.py  other_settings.py  role_library.py  setting_tab.py  styles.py  summary_tab.py
(+175 files in other folders)
