[package]
name = "ai-novel-generator"
version = "0.1.0"
description = "Next-generation Tauri frontend shell for AI Novel Generator"
authors = ["AI Novel Generator contributors"]
edition = "2021"

[lib]
name = "ai_novel_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
